[gd_scene load_steps=19 format=3 uid="uid://vg8psh0mfjau"]

[ext_resource type="Texture2D" uid="uid://dx3im452arqlw" path="res://assets/screens/questionsscreen/background.png" id="1_gdakd"]
[ext_resource type="Script" path="res://scripts/backstory_screen.gd" id="1_lsmfe"]
[ext_resource type="Texture2D" uid="uid://dgpqtls5hdacq" path="res://dialogues/portraits/gemini.png" id="2_so20i"]
[ext_resource type="PackedScene" uid="uid://daatymj755m4a" path="res://assets/random_squares.tscn" id="2_t8yqe"]
[ext_resource type="Shader" path="res://shaders/border_rect_alpha.gdshader" id="4_alh06"]
[ext_resource type="Texture2D" uid="uid://rf2nkntwiltm" path="res://backstory-images/debug_image.png" id="5_6ct5w"]

[sub_resource type="SystemFont" id="SystemFont_bgd65"]
font_names = PackedStringArray("Google Sans")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_qj4hr"]
font_names = PackedStringArray("Google Sans Display")
subpixel_positioning = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_voxh7"]
shader = ExtResource("4_alh06")
shader_parameter/border_width = 0.021
shader_parameter/border_softness = 0.332

[sub_resource type="SystemFont" id="SystemFont_m6vam"]
font_names = PackedStringArray("Google Sans Display")
font_weight = 900
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40g71"]
bg_color = Color(0, 0, 0, 0.764)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 0.629)
shadow_size = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pjvp"]
bg_color = Color(0.819608, 0.25098, 0.203922, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 0.629)
shadow_size = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51mai"]
bg_color = Color(0, 0, 0, 0.764)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.921569, 0.682353, 0.0196078, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0.925, 0.686, 0.008, 0.565)
shadow_size = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msgug"]
bg_color = Color(0, 0, 0, 0.764)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 0.629)
shadow_size = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swdtu"]
bg_color = Color(0, 0, 0, 0.764)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1, 1, 1, 0.629)
shadow_size = 11

[sub_resource type="Theme" id="Theme_gxg1n"]
Button/font_sizes/font_size = 35
Button/fonts/font = SubResource("SystemFont_m6vam")
Button/styles/disabled = SubResource("StyleBoxFlat_40g71")
Button/styles/focus = SubResource("StyleBoxFlat_2pjvp")
Button/styles/hover = SubResource("StyleBoxFlat_51mai")
Button/styles/normal = SubResource("StyleBoxFlat_msgug")
Button/styles/pressed = SubResource("StyleBoxFlat_swdtu")

[sub_resource type="SystemFont" id="SystemFont_5xerh"]
font_names = PackedStringArray("Google Sans Display")
font_weight = 900
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_g2ilv"]
font_names = PackedStringArray("Google Sans")
font_weight = 500
subpixel_positioning = 0

[node name="BackStory" type="Node"]
script = ExtResource("1_lsmfe")

[node name="RandomSquares" parent="." instance=ExtResource("2_t8yqe")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_gdakd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Separator" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="GeminiLogo" type="TextureRect" parent="VBoxContainer/Title"]
visible = false
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_so20i")
expand_mode = 2

[node name="title" type="Label" parent="VBoxContainer/Title"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.83, 0.83, 0.83, 0.669)
theme_override_colors/font_outline_color = Color(0.818, 0.818, 0.818, 0.658)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 13
theme_override_fonts/font = SubResource("SystemFont_bgd65")
theme_override_font_sizes/font_size = 54
text = "âœ¦ BACKSTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackstoryHBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="BackStoryText" type="RichTextLabel" parent="VBoxContainer/BackstoryHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
theme_override_fonts/normal_font = SubResource("SystemFont_qj4hr")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Okay, listen up, \"Banana-loving Adventurer Noob.\" You're in the Archive, a digital dinosaur graveyard from the 80s/90s. Rogue AI's turned it into a tech-terror zone. Clean the corrupted CRTs and floppies, find the boss. First, hunt down the \"Flux Capacitor Wrench.\" Without it, you, a self-proclaimed \"noob,\" won't last a byte. Go."

[node name="BackStoryImage" type="TextureRect" parent="VBoxContainer/BackstoryHBox"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_voxh7")
custom_minimum_size = Vector2(600, 90)
layout_mode = 2
texture = ExtResource("5_6ct5w")
expand_mode = 2
stretch_mode = 2
flip_h = true

[node name="HUD" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Next" type="Button" parent="VBoxContainer/HUD"]
visible = false
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = SubResource("Theme_gxg1n")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HUD/Next"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
offset_left = 172.0
offset_top = 31.0
offset_right = 472.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = SubResource("SystemFont_5xerh")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[pulse freq=1.0 color=#ffffff40 ease=-2.0]Go Play ![/pulse]"

[node name="PressXKeyLabel" type="RichTextLabel" parent="VBoxContainer/HUD/Next"]
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
offset_left = 580.0
offset_right = 581.0
offset_bottom = 589.0
theme_override_colors/default_color = Color(0.513726, 0.52549, 0.541176, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_g2ilv")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]PRESS [color=\"#F4B400\"]A[/color] TO CONTINUE[/right]"
fit_content = true

[node name="PressXKeyLabel2" type="RichTextLabel" parent="VBoxContainer/HUD"]
custom_minimum_size = Vector2(400, 24)
layout_mode = 2
theme_override_colors/default_color = Color(0.513726, 0.52549, 0.541176, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_g2ilv")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[right]PRESS [color=\"#F4B400\"]A[/color] TO CONTINUE[/right]"
fit_content = true

[node name="outerboarder" type="Node2D" parent="."]
visible = false

[node name="top" type="ColorRect" parent="outerboarder"]
offset_right = 1920.0
offset_bottom = 48.0
color = Color(0.0784314, 0.2, 0.12549, 1)

[node name="32px-spacer" type="ColorRect" parent="outerboarder"]
offset_left = -10.0
offset_top = 665.0
offset_right = 1910.0
offset_bottom = 713.0
color = Color(0.0784314, 0.2, 0.12549, 1)

[node name="32px-spacer2" type="ColorRect" parent="outerboarder"]
offset_left = 961.0
offset_top = 966.0
offset_right = 1446.0
offset_bottom = 1014.0
color = Color(0.0784314, 0.2, 0.12549, 1)

[node name="bottom" type="ColorRect" parent="outerboarder"]
offset_top = 1032.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0784314, 0.2, 0.12549, 1)

[node name="left" type="ColorRect" parent="outerboarder"]
offset_right = 48.0
offset_bottom = 1080.0
color = Color(0.956863, 0.705882, 0, 1)

[node name="right" type="ColorRect" parent="outerboarder"]
offset_left = 1872.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0784314, 0.2, 0.12549, 1)

[node name="center-topbottom" type="ColorRect" parent="outerboarder"]
offset_left = 960.0
offset_right = 961.0
offset_bottom = 1080.0
color = Color(0.330424, 0.0282391, 0.108228, 1)

[node name="center-topbottom2" type="ColorRect" parent="outerboarder"]
offset_left = 475.0
offset_top = 1.0
offset_right = 476.0
offset_bottom = 1081.0
color = Color(0.330424, 0.0282391, 0.108228, 1)

[node name="center-topbottom3" type="ColorRect" parent="outerboarder"]
offset_left = 1446.0
offset_top = 1.0
offset_right = 1447.0
offset_bottom = 1081.0
color = Color(0.330424, 0.0282391, 0.108228, 1)

[node name="center-leftright" type="ColorRect" parent="outerboarder"]
offset_top = 540.0
offset_right = 1920.0
offset_bottom = 541.0
color = Color(0.330424, 0.0282391, 0.108228, 1)

[connection signal="pressed" from="VBoxContainer/HUD/Next" to="." method="_on_next_pressed"]
